--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -196,6 +196,7 @@ html.theme-dark .author__urls .far,
 html.theme-dark .author__urls .fal {
   color: #ddd;
 }
+html.theme-dark .author__urls .fa { color: #ddd; }
 html.theme-dark .author__urls a {
   color: #ddd;
 }
